fix label for posts

--- a/aktionen/_posts/2022-08-06-csd.md
+++ b/aktionen/_posts/2022-08-06-csd.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Christopher Street Day (CSD) Nürnberg"
-categories: klima
+categories: queerfeminismus
 date: 2022-08-06
 gruppe: []
 ---
