--- a/_announce/2022-08-20-antifa.md
+++ b/_announce/2022-08-20-antifa.md
@@ -17,4 +17,4 @@ Voraussichtlich Plärrer um 11:00
 
 [twitter thread mit background](https://twitter.com/redsideNBG/status/1551632662774910978)
 
-Related: [demo Nazistopp](./2022-08-20-nazistopp)
+Related: [demo Nazistopp]({% link _announce/2022-08-20-nazistopp.md %})
