--- a/aktionen/_posts/2022-08-06-csd.md
+++ b/aktionen/_posts/2022-08-06-csd.md
@@ -3,7 +3,7 @@ layout: post
 title: "Christopher Street Day (CSD) Nürnberg"
 categories: queerfeminismus
 date: 2022-08-06
-gruppe: []
+gruppe: [csd]
 ---
 
 Die Demo des CSDs (vielerorts auch als Pride bekannt) fand statt. 
