--- a/_announce/2022-08-20-antifa.md
+++ b/_announce/2022-08-20-antifa.md
@@ -4,7 +4,7 @@ title: "Antifa Gegendemo"
 categories: antifa
 date: 2022-08-13
 event-date: 2022-08-20
-gruppe: []
+gruppe: [aak]
 ---
 
 Voraussichtlich Plärrer um 11:00
