--- a/_announce/2022-09-10-9euro.md
+++ b/_announce/2022-09-10-9euro.md
@@ -4,7 +4,7 @@ title: "9€-Ticket für immer"
 categories: [linke, klima]
 date: 2022-09-04
 event-date: 2022-09-10
-gruppe: [nan]
+gruppe: [nan, falken, sav]
 ---
 
 14 Uhr am Nelson-Mandela-Platz.
