--- a/_announce/2022-09-10-9euro.md
+++ b/_announce/2022-09-10-9euro.md
@@ -1,12 +1,17 @@
 ---
 layout: announce
 title: "9€-Ticket für immer"
-categories: [linke, klima]
-date: 2022-09-04
+categories: [linke]
+date: 2022-09-08
 event-date: 2022-09-10
+imagelocal: "2022-09-10-9e.png"
+alttext: "Das 9-Euro-Ticket war ein voller Erfolg. Es hat die Menschen entlastet, den öffentlichen Nahverkehr gestärkt und 1,8 Millionen Tonnen CO2 eingespart. Dass die Ampelregierung keine Anschlusslösung umgesetzt hat, ist inakzeptabel. -- Für eine soziale Anschlusslösung stehen wir jetzt auf und gehen gegen die unsoziale Politik der Regierung und für soziale Sicherheit auf die Straße.A -- Lade deine Freunde und Bekannten ein. Infos findest du unter www.nichtallein.info. Auf dem Laufenden bleibst du auch über unseren Telegramkanal https://t.me/nichtallein"
 gruppe: [nan, falken, sav]
 ---
 
 14 Uhr am Nelson-Mandela-Platz.
 
-[Ankündigung auf Instagram](https://www.instagram.com/p/CiARVUnjqXW/)
+[Ankündigung auf Instagram](https://www.instagram.com/p/CiARVUnjqXW/).
+
+Info auch unter [nichtallein.info](https://nichtallein.info/).
+~
